--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <script>
     // Paste your deployed Apps Script Web App URL here:
-    const WEB_APP_URL = "PASTE_YOUR_APPS_SCRIPT_WEBAPP_URL_HERE";
+    const WEB_APP_URL = "https://kathleen-unofficiated-roseanna.ngrok-free.dev";
 
     async function submitForm() {
       const msg = document.getElementById("msg");
