Update WEB_APP_URL to new ngrok address

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <script>
     // Paste your deployed Apps Script Web App URL here:
-    const WEB_APP_URL = "https://kathleen-unofficiated-roseanna.ngrok-free.dev";
+    const WEB_APP_URL = "https://xxxx.ngrok-free.app/submit";
 
     async function submitForm() {
       const msg = document.getElementById("msg");
