--- a/index.html
+++ b/index.html
@@ -57,44 +57,20 @@
   <div class="msg" id="msg"></div>
 
   <script>
-    // Paste your deployed Apps Script Web App URL here:
-    const WEB_APP_URL = "https://xxxx.ngrok-free.app/submit";
+   const WEB_APP_URL = "https://xxxx.ngrok-free.app/submit";
 
-    async function submitForm() {
-      const msg = document.getElementById("msg");
-      const btn = document.getElementById("submitBtn");
+async function submitForm() {
+  const form = new FormData();
+  form.append("product_name", document.getElementById("product_name").value);
+  form.append("front", document.getElementById("front").files[0]);
+  form.append("back", document.getElementById("back").files[0]);
 
-      const product_name = document.getElementById("product_name").value.trim();
-      const front = document.getElementById("front").files[0];
-      const back = document.getElementById("back").files[0];
+  const res = await fetch(WEB_APP_URL, { method: "POST", body: form });
+  const data = await res.json();
+  console.log(data);
+  }
 
-      if (!product_name || !front || !back) {
-        msg.textContent = "Please enter product name and select BOTH images.";
-        return;
-      }
 
-      btn.disabled = true;
-      msg.textContent = "Uploading...";
-
-      // Barcode is optional for now (we’ll add scanning later)
-      const barcode = "nil";
-
-      const form = new FormData();
-      form.append("product_name", product_name);
-      form.append("barcode", barcode);
-      form.append("front", front);
-      form.append("back", back);
-
-      try {
-        const res = await fetch(WEB_APP_URL, { method: "POST", body: form });
-        const data = await res.json();
-        msg.textContent = JSON.stringify(data, null, 2);
-      } catch (e) {
-        msg.textContent = "Upload failed: " + e;
-      } finally {
-        btn.disabled = false;
-      }
-    }
   </script>
 </body>
 </html>
