Update WEB_APP_URL to new ngrok address

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <div class="msg" id="msg"></div>
 
   <script>
-   const WEB_APP_URL = "https://xxxx.ngrok-free.app/submit";
+   const WEB_APP_URL = "https://abcd-123.ngrok-free.app/submit";
 
 async function submitForm() {
   const form = new FormData();
